--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="header">
         <a href="#" class="header__menu menu-button">
-          <img src="../i/logo/menu.png">
+          <img src="./i/logo/menu.png">
         </a>
             <nav class="menu ">
               <ul class="menu-desktop">
@@ -146,56 +146,56 @@
         <div class="card" id="card-sl">
           <div class="card__item card-item__first lcx">
             <span class="card__item_sale"><p>-20%</p></span>
-            <img src="../i/product/product-01.jpeg">
+            <img src="./i/product/product-01.jpeg">
             <div class="card-menu">
               <div class="card-menu__item">
-                <img src="../i/bag.svg" class="img-svg">
+                <img src="./i/bag.svg" class="img-svg">
               </div>
               <div class="card-menu__item">
-                <img src="../i/eye.svg" class="img-svg">
+                <img src="./i/eye.svg" class="img-svg">
               </div>
               <div class="card-menu__item">
-                <img src="../i/star.svg" class="img-svg">
+                <img src="./i/star.svg" class="img-svg">
               </div>
               <div class="card-menu__item">
-                <img src="../i/arrows.svg" class="img-svg">
+                <img src="./i/arrows.svg" class="img-svg">
               </div>
             </div>
             <p class="card__item__price"><span>$39.00</span>$29.00</p>
             <p class="card__item__name">Facial cleanser</p>
             <div class="card__item__reviews">
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
               <span class="card__item__reviews__text">  2947 reviews</span>
             </div>
           </div>
           <div class="card__item card-item__second">
-            <img src="../i/product/product-02.jpeg">
+            <img src="./i/product/product-02.jpeg">
             <div class="card-menu">
               <div class="card-menu__item">
-                <img src="../i/bag.svg" class="img-svg">
+                <img src="./i/bag.svg" class="img-svg">
               </div>
               <div class="card-menu__item">
-                <img src="../i/eye.svg" class="img-svg">
+                <img src="./i/eye.svg" class="img-svg">
               </div>
               <div class="card-menu__item">
-                <img src="../i/star.svg" class="img-svg">
+                <img src="./i/star.svg" class="img-svg">
               </div>
               <div class="card-menu__item">
-                <img src="../i/arrows.svg" class="img-svg">
+                <img src="./i/arrows.svg" class="img-svg">
               </div>
             </div>
             <p class="card__item__price"><span>$39.00</span>$29.00</p>
             <p class="card__item__name">Facial cleanser</p>
             <div class="card__item__reviews">
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
-              <span class="star"><img src="../i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
+              <span class="star"><img src="./i/star1.svg" class="img-svg"></span>
               <span class="card__item__reviews__text">  2947 reviews</span>
             </div>
           </div>
